--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -15,31 +10,47 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
+
   <body>
-    <h1>Моя сторінка з іконками</h1>
-    <div>
-      <img
-        src="./assets/img/Screenshot from 2025-09-26 21-13-14.png"
-        alt="img"
-      />
-    </div >
-    <p><i class="fa-solid fa-house"></i> Головна</p>
     <div class="container">
-      <div><i class="fa-solid fa-location-arrow"></i>New York City, NY</div>
-      <div>
-        <img src="./assets/img/photo-user.png" alt="photo user" />
+      <div class="location-container">
+        <i class="fa-solid fa-location-arrow"></i>New York City, NY
       </div>
-      <div>Margot Robbie</div>
-      <div>
+      <div class="photo-container">
+        <img class="photo" src="./assets/img/photo-user.png" alt="photo user" />
+      </div>
+      <div class="user-name">Margot Robbie</div>
+      <div class="user-info">
         Margot Robbie was born in Dalby, Queesland, Australia and raised on Gold
         Coast.
       </div>
-      <div>Follow</div>
+      <div class="follow-container">
+        <button class="follow-button">Follow</button>
+      </div>
+
+      <footer>
+        <div class="footer-info">
+          <i class="fa-solid fa-image footer-ico"></i>
+          <div>
+            <p>Posts</p>
+            <p>635</p>
+          </div>
+        </div>
+        <div class="footer-info">
+          <i class="fa-regular fa-heart footer-ico"></i>
+          <div>
+            <p>Favorites</p>
+            <p>3456</p>
+          </div>
+        </div>
+        <div class="footer-info">
+          <i class="fa-regular fa-paper-plane footer-ico"></i>
+          <div>
+            <p>Messages</p>
+            <p>1234</p>
+          </div>
+        </div>
+      </footer>
     </div>
-    <footer>
-      <div><i class="fa-solid fa-image"></i> Posts</div>
-      <div><i class="fa-regular fa-heart"></i> Favorites</div>
-      <div><i class="fa-regular fa-paper-plane"></i> Messages</div>
-    </footer>
   </body>
 </html>
